исправила замечания ревьюера

--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,8 @@ DB_HOST=db
 # Порт соединения к БД
 DB_PORT=5432
 
-SECRET_KEY='Серетный ключ Django'
+# Секретный ключ Django (без кавычек).
+SECRET_KEY=
 
 DEBUG=False
 
@@ -24,4 +25,6 @@ DEBUG=False
 # и для доступа к приложению по внутреннему интерфейсу.
 # В таком виде: ALLOWED_HOSTS=51.250.24.131, 127.0.0.1, localhost, cute-kittygram.ddns.net
 ALLOWED_HOSTS=
+
+DB_NAME=kittygram
 
